--- a/examples/minioinstance-with-external-service.yaml
+++ b/examples/minioinstance-with-external-service.yaml
@@ -38,7 +38,7 @@ spec:
       prometheus.io/port: "9000"
       prometheus.io/scrape: "true"
   ## Registry location and Tag to download MinIO Server image
-  image: minio/minio:RELEASE.2020-01-03T19-12-21Z
+  image: rpsene/minio-ppc64le:20200115-174924
   ## Secret with credentials to be used by MinIO instance.
   credsSecret:
     name: minio-creds-secret
