--- a/minio-operator.yaml
+++ b/minio-operator.yaml
@@ -131,5 +131,5 @@ spec:
       serviceAccountName: minio-operator-sa
       containers:
         - name: minio-operator
-          image: minio/k8s-operator:1.0.4
+          image: rpsene/minio-operator-ppc64le:1.0.6-3-g604167e
           imagePullPolicy: IfNotPresent
